--- a/src/main.css
+++ b/src/main.css
@@ -51,17 +51,20 @@
 
 .marketing .col-md-4 {
   text-align: center;
-  font-size: 16px;
+  font-size: 22px;
 }
 
 .marketing .col-md-4 .glyphicon {
-  font-size: 60px;
+  font-size: 36px;
   background-color: #EAEAEA;
   border-radius: 50%;
   padding: 40px;
   color: #444;
 }
 
+.h3 {
+  font-size: 30px;
+}
 
 /* STICKY FOOTER
 -------------------------------------------------- */
@@ -75,6 +78,7 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 160px;
 }
+
 
 .footer,
 footer {
